--- a/Project/modules/app/src/main/res/layouts/activities/administratorActivity/layout/administrator_activity_content_layout.xml
+++ b/Project/modules/app/src/main/res/layouts/activities/administratorActivity/layout/administrator_activity_content_layout.xml
@@ -32,6 +32,14 @@
             type="com.lonn.studentassistant.firebaselayer.businessLayer.viewModels.FileContentViewModel" />
 
         <variable
+            name="announcements"
+            type="java.util.Collection&lt;com.lonn.studentassistant.firebaselayer.businessLayer.viewModels.AnnouncementViewModel&gt;" />
+
+        <variable
+            name="administrativeFiles"
+            type="java.util.Collection&lt;com.lonn.studentassistant.firebaselayer.businessLayer.viewModels.FileMetadataViewModel&gt;" />
+
+        <variable
             name="editingProfile"
             type="Boolean" />
     </data>
@@ -89,7 +97,9 @@
             layout="@layout/administrator_activity_administrative_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="invisible" />
+            android:visibility="invisible"
+            app:administrativeFiles="@{administrativeFiles}"
+            app:announcements="@{announcements}" />
 
         <include
             android:id="@+id/layoutOtherActivities"
