--- a/Project/modules/app/src/main/res/menu/administrator_drawer.xml
+++ b/Project/modules/app/src/main/res/menu/administrator_drawer.xml
@@ -16,10 +16,10 @@
             android:id="@+id/nav_registration"
             android:icon="@drawable/ic_menu_schedule"
             android:title="Registration" />
-        <item
-            android:id="@+id/nav_messages"
-            android:icon="@drawable/ic_menu_messages"
-            android:title="Messages" />
+<!--        <item-->
+<!--            android:id="@+id/nav_messages"-->
+<!--            android:icon="@drawable/ic_menu_messages"-->
+<!--            android:title="Messages" />-->
     </item>
 
     <item android:title="Public information">
