Small modifications to doc

--- a/Project/modules/app/src/main/res/layouts/activities/studentActivity/layout/student_activity_profile_layout.xml
+++ b/Project/modules/app/src/main/res/layouts/activities/studentActivity/layout/student_activity_profile_layout.xml
@@ -151,10 +151,10 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="0.5"
-                        android:background="@{editing? @drawable/edit_text_background : null}"
+                        android:background="@{null}"
                         android:focusable="@{false}"
                         android:hint="@{editing &amp;&amp; (student.cycleSpecializationYear == null)? `Enter year` : `(none)`}"
-                        android:inputType="phone"
+                        android:inputType="text"
                         android:onClick="tapEditText"
                         android:singleLine="true"
                         android:text="@{student.cycleSpecializationYear.toString()}" />
@@ -186,10 +186,10 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="0.5"
-                        android:background="@{editing? @drawable/edit_text_background : null}"
+                        android:background="@{null}"
                         android:focusable="@{false}"
                         android:hint="@{editing &amp;&amp; (student.group == null || student.group.length() == 0)? `Enter group` : `(none)`}"
-                        android:inputType="phone"
+                        android:inputType="text"
                         android:onClick="tapEditText"
                         android:singleLine="true"
                         android:text="@{student.group}" />
